# MxSelfBot

./: Cargo.toml  README.md
locales/: general.json  strings.json
locales/cmds/: about.json  help.json
src/: context.rs  log.rs  main.rs  mxclient.rs
src/cmds/: about.rs  info.rs  mod.rs  ping.rs
