[package]
name = "mxselfbot"
version = "0.0.0"
description = "A Matrix bot designed to run behind your own Matrix account providing various helpful commands to enhance your Matrix experience"
repository = "https://github.com/0x1a8510f2/MxSelfBot"
authors = ["0x1a8510f2 <admin@0x1a8510f2.space>"]
edition = "2018"

# Deps

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "cd77441d1bf8318ecf4cc9e1886696558ea6ed7b"
default-features = true
features = ["encryption", "markdown"]

[dependencies.signal-hook]
version = "0.3.8"
features = ["extended-siginfo"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.url]
version = "2"

[dependencies.lazy_static]
version = "1"

[dependencies.async-trait]
version = "0"

[dependencies.locales]
version = "0"