[package]
name = "mxselfbot"
version = "0.0.0"
description = "A Matrix bot designed to run behind your own Matrix account providing various helpful commands to enhance your Matrix experience"
repository = "https://github.com/0x1a8510f2/MxSelfBot"
authors = ["0x1a8510f2 <admin@0x1a8510f2.space>"]
edition = "2018"

# Deps

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "fe17dce813f500b4c633669a7078ee843bb44886"
default-features = true
features = ["encryption", "markdown"]

[dependencies.signal-hook]
version = "0.3.8"
features = ["extended-siginfo"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.url]
version = "2"

[dependencies.lazy_static]
version = "1"

[dependencies.async-trait]
version = "0"

[dependencies.locales]
version = "0"

[dependencies]
chrono = "0"